EDT with XSLT & Api integration